--- a/pages/lab5.html
+++ b/pages/lab5.html
@@ -89,8 +89,7 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-12">
-                        <h1>Our Shaky Isles</h1>
-                    </div>
+                        <h1>Our Shaky Isles</h1><p>Last 50 seismic events in New Zealand, data sourced from <a href="https://api.geonet.org.nz">Geonets quake API</a>.
 					
 					<div id="map"></div>
 					<div id="legend"><div id="legendGradient"></div><div>1 <span style="white-space:pre">                                        </span> <b>Magnitude</b> <span style="white-space:pre">                                  </span> 5+</div></div>
