--- a/pages/project.html
+++ b/pages/project.html
@@ -244,6 +244,9 @@ opacity: 0.9;
                 <li>
                     <a href="../pages/project.html">Project &#8592;</a>
                 </li>
+				<li>
+                    <a href="../pages/visualisation.html">Three.js</a>
+                </li>
                 <li>
                     <a href="../pages/contact.html">Contact</a>
                 </li>
