--- a/pages/lab5.html
+++ b/pages/lab5.html
@@ -77,6 +77,9 @@
                 <li>
                     <a href="../pages/project.html">Project</a>
                 </li>
+				<li>
+                    <a href="../pages/visualisation.html">Three.js</a>
+                </li>
                 <li>
                     <a href="../pages/contact.html">Contact</a>
                 </li>
