--- a/pages/visualisation.html
+++ b/pages/visualisation.html
@@ -17,13 +17,26 @@
     <!-- Custom CSS -->
     <link href="../css/simple-sidebar.css" rel="stylesheet">
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
 	<link rel="icon" href="http://www.coe.int/coe-map-portlet/images/icon.png">
+	<script src="http://threejs.org/build/three.min.js"></script>
+	<script src="http://threejs.org/examples/js/controls/OrbitControls.js"></script>
+<style>
+	
+	.container-canvas {
+	background-color:grey;
+	margin-right: 100px;
+	margin-top: 10px;
+	width: 640px;
+	height: 540px;
+	}
+	#hind{
+	margin: 0 auto;
+	width: 600px;
+	height: 500px;
+	}
+</style>
+	
+	
 </head>
 
 <body onload="nav()">
@@ -42,22 +55,22 @@
                     <a href="../index.html">Home</a>
                 </li>
                 <li>
-                    <a href="../pages/lab2.html">Lab 2 &#8592;</a>
+                    <a href="../pages/lab2.html">Lab 2</a>
                 </li>
                 <li>
                     <a href="../pages/lab3.html">Lab 3</a>
                 </li>
                 <li>
-                    <a href="../pages/lab4.html">Lab 4</a>
+                    <a href="../pages/lab4.html">Lab 4 </a>
                 </li>
                 <li>
-                    <a href="../pages/lab5.html">Lab 5</a>
+                    <a href="../pages/lab5.html">Lab 5 </a>
                 </li>
                 <li>
                     <a href="../pages/project.html">Project</a>
                 </li>
 				<li>
-                    <a href="../pages/visualisation.html">Three.js</a>
+                    <a href="../pages/visualisation.html">Three.js &#8592;</a>
                 </li>
                 <li>
                     <a href="../pages/contact.html">Contact</a>
@@ -71,13 +84,22 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-12">
-                        <h1>Lab 2</h1>
-						<div>
-						<iframe width="100%" height="820" frameborder="0" src="https://asca576.carto.com/builder/5a4e9c88-bdc2-49a9-9c67-b952c0a4c35d/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
-						</div>
+                        <h1>Three.js Visualisation</h1>
                     </div>
+					This is a single piece .json 3d model (converted from .obj via Blender) mapped a single texture, the subject is of an <a href="https://en.wikipedia.org/wiki/Mil_Mi-24">Mil Mi-24</a>, obtained from <a href ="https://www.turbosquid.com/3d-models/free-mi-24-helicopter-3d-model/863905"> TurboSquid </a>.
+					<br>
+					<b>Left click</b>: Rotate;	<b>Right click</b>: Pan; <b>Middle click</b>: Zoom; <b>Scroll</b>: Zoom;			
+					            <div class="container-canvas">
+					<div id="hind">
+					<br>
+
+					<script src="../js/visualisation/VIS_singletexture.js"> </script>
+					</div>
+					</div>	
+					
                 </div>
             </div>
+
         </div>
         <!-- /#page-content-wrapper -->
 
