--- a/pages/visualisation.html
+++ b/pages/visualisation.html
@@ -18,8 +18,8 @@
     <link href="../css/simple-sidebar.css" rel="stylesheet">
 
 	<link rel="icon" href="http://www.coe.int/coe-map-portlet/images/icon.png">
-	<script src="http://threejs.org/build/three.min.js"></script>
-	<script src="http://threejs.org/examples/js/controls/OrbitControls.js"></script>
+	<script src="https://threejs.org/build/three.min.js"></script>
+	<script src="https://threejs.org/examples/js/controls/OrbitControls.js"></script>
 <style>
 	
 	.container-canvas {
