--- a/pages/visualisation.html
+++ b/pages/visualisation.html
@@ -86,7 +86,7 @@
                     <div class="col-lg-12">
                         <h1>Three.js Visualisation</h1>
                     </div>
-					This is a single piece .json 3d model (converted from .obj via Blender) mapped a single texture, the subject is of an <a href="https://en.wikipedia.org/wiki/Mil_Mi-24">Mil Mi-24</a>, obtained from <a href ="https://www.turbosquid.com/3d-models/free-mi-24-helicopter-3d-model/863905"> TurboSquid </a>.
+					This is a single piece .json 3d model (converted from .obj via Blender) mapped with a single texture, the subject an <a href="https://en.wikipedia.org/wiki/Mil_Mi-24">Mil Mi-24</a>, obtained from <a href ="https://www.turbosquid.com/3d-models/free-mi-24-helicopter-3d-model/863905"> TurboSquid </a>.
 					<br>
 					<b>Left click</b>: Rotate;	<b>Right click</b>: Pan; <b>Middle click</b>: Zoom; <b>Scroll</b>: Zoom;			
 					            <div class="container-canvas">
